# signal-os

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements-eval.txt  requirements.txt  vercel.json
api/: app.py
docs/: ARCHITECTURE.md  EVALUATION.md  IMPLEMENTATION_PLAN.md  PRD.md
docs/ADR/: 0001-fastapi-vercel-python.md  0002-skills-vs-workflows.md  0003-postgres-prod-sqlite-local.md  0004-human-approved-code-fixes.md  0005-telegram-feedback-guardrails.md  0006-pm-decision-support-not-research-digest.md
public/: app.js  index.html
signalos/agents/: feedback_agent.py  impact_agent.py  novelty_agent.py  rca_agent.py  repair_agent.py
signalos/config/: sources.yaml
signalos/core/: config.py  db.py  feedback_guardrails.py  input_safety.py  llm.py  logging.py  models.py  preferences.py  skill_registry.py
signalos/evaluation/: feedback_metrics.py  metrics.py  offline.py  runner.py
signalos/ingestion/: __init__.py  arxiv.py  collector.py  github.py  rss.py
signalos/source_intelligence/: __init__.py  briefing.py  clustering.py  models.py  registry.py  scoring.py
signalos/sources/: __init__.py  arxiv_source.py  github_source.py  rss_source.py
signalos/workflows/: clustering.py  embeddings.py  event_router.py  normalize.py  pipeline.py  render.py  repair_policy.py  scoring.py  source_loader.py  telegram.py  validation.py
skills/product-impact/: SKILL.md
tests/: test_feedback_clarifying.py  test_feedback_guardrails.py  test_feedback_metrics.py  test_metrics.py  test_novelty.py  test_source_intelligence.py  test_telegram_filtering.py
(+4 files in other folders)
