[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "signalos"
version = "0.1.0"
description = "Signal — AI intelligence platform"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.117.1",
  "openai>=1.40.0",
  "requests>=2.32.0",
  "feedparser>=6.0.11",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.0",
  "SQLAlchemy>=2.0.30",
  "PyYAML>=6.0.2",
  "numpy>=2.0.0",
  "tenacity>=8.5.0",
  "beautifulsoup4>=4.12.3",
  "lxml>=5.2.2",
  "python-dateutil>=2.9.0",
  "uvicorn>=0.30.1",
  "python-multipart>=0.0.9",
  "tzdata>=2024.1",
  "psycopg2-binary>=2.9.9"
]

[tool.setuptools.packages.find]
include = ["signalos*"]
namespaces = false

[tool.vercel]
entrypoint = "api.app:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
